--- a/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
@@ -106,14 +106,29 @@
         android:ems="10"
         >
     </TextView>
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="(Follows You)"
+        android:gravity="center"
+        android:textColor="@color/almostblack"
+        android:fontFamily="sans-serif-condensed"
+        android:textSize="10dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:id="@+id/FollowsYouText"
+        app:layout_constraintTop_toBottomOf="@+id/UsernameText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:ems="10"
+        >
+    </TextView>
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/Statics"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/UsernameText"
+        android:layout_marginTop="2dp"
+        app:layout_constraintTop_toBottomOf="@+id/FollowsYouText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:columnCount="2"
@@ -130,7 +145,6 @@
             android:id="@+id/Followers"
             android:text="3453"
             android:clickable="true"
-            app:layout_constraintTop_toBottomOf="@+id/UsernameText"
             app:layout_constraintEnd_toStartOf="@+id/FollowingText"
             app:layout_constraintStart_toStartOf="parent"
             >
@@ -146,7 +160,6 @@
             android:fontFamily="sans-serif-medium"
             android:id="@+id/Following"
             android:text="1238"
-            android:clickable="true"
             app:layout_constraintTop_toBottomOf="@+id/UsernameText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -224,19 +237,42 @@
         </Button>
 
     </GridLayout>
-    <Button
-        android:layout_width="340dp"
-        android:layout_height="40dp"
-        android:id="@+id/EditProfileButton"
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/Statics"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/almostorange"
-        android:textSize="12dp"
-        android:text="Edit Profile">
+        android:rowCount="1"
+        android:columnCount="2"
+        android:id="@+id/SeetingEdit"
+        android:paddingHorizontal="20dp"
+        android:useDefaultMargins="true"
+        >
+        <Button
+            android:text="Edit Profile"
+            android:id="@+id/EditProfileButton"
+            android:layout_width="170dp"
+            android:textColor="@color/almostorange"
+            android:textSize="12dp"
+            android:backgroundTint="@color/white">
 
-    </Button>
+        </Button>
+
+        <Button
+            android:id="@+id/Setting"
+            android:layout_width="171dp"
+            android:backgroundTint="@color/white"
+            android:text="Setting"
+            android:textSize="12dp"
+
+            android:textColor="@color/almostorange">
+
+        </Button>
+
+    </GridLayout>
 
 
     <TextView
