--- a/ChatHouse/app/src/main/res/layout/activity_search.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_search.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/b22"
     android:orientation="vertical">
 
     <SearchView
@@ -14,22 +15,46 @@
 
         <requestFocus />
     </SearchView>
-    <TextView
-        android:id="@+id/SearchTitle"
-        android:layout_width="match_parent"
+
+    <LinearLayout
+        android:id="@+id/search_loading"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_below="@+id/search"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="7dp"
         android:gravity="center"
-        android:text="Search in all people"
-        android:textColor="@color/black"
-        android:textSize="22dp"/>
+        >
+
+        <TextView
+            android:id="@+id/SearchTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search in all people"
+            android:textColor="@color/Verypink"
+            android:textStyle="bold"
+            android:textSize="22dp"
+            android:layout_gravity="center" />
+
+        <ProgressBar
+            android:id="@+id/search_progressbar"
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyle"
+            android:progressDrawable="@drawable/loading"
+            android:visibility="gone"
+            >
+
+        </ProgressBar>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/SearchError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/SearchTitle"
+        android:layout_below="@+id/search_loading"
         android:layout_marginVertical="10dp"
         android:gravity="center"
         android:text="No Results Found"
@@ -37,20 +62,12 @@
         android:textSize="20dp"
         android:visibility="invisible" />
 
-    <Button
-        android:id="@+id/ProfBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:text="profile"
-        app:iconTint="#00FF83" />
-
     <LinearLayout
         android:id="@+id/s"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/SearchTitle"
         android:layout_above="@+id/Search_menu"
+        android:layout_below="@+id/search_loading"
         android:orientation="vertical">
 
         <ListView
@@ -60,19 +77,25 @@
             android:layout_below="@+id/search"
             android:layout_weight="4"></ListView>
 
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/white"
+            android:tooltipText="Interests" />
+
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_below="@+id/SearchedPersonListView"
             android:layout_alignParentBottom="true"
-            android:layout_weight="7"
-            >
+            android:layout_weight="7">
 
             <HorizontalScrollView
                 android:id="@+id/Items"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="@color/gray">
+                android:fadeScrollbars="false">
 
                 <GridLayout
                     android:id="@+id/item_grid"
@@ -88,7 +111,7 @@
                 android:id="@+id/Category"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/black">
+                android:fadeScrollbars="false">
 
                 <GridLayout
                     android:id="@+id/category_grid"
@@ -396,7 +419,6 @@
                 </GridLayout>
             </ScrollView>
 
-
         </RelativeLayout>
 
     </LinearLayout>
@@ -406,6 +428,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation"/>
+        android:background="@color/light"
+        app:menu="@menu/bottom_navigation" />
+
 </RelativeLayout>
 
