--- a/ChatHouse/app/src/main/res/values/themes.xml
+++ b/ChatHouse/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
         <item name="colorOnPrimary">@color/Pink</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/Verypink</item>
-        <item name="colorSecondaryVariant">@color/cyan</item>
+        <item name="colorSecondaryVariant">@color/white</item>
         <item name="colorOnSecondary">@color/almostgreen</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
