--- a/ChatHouse/app/src/main/res/layout/activity_edit_profile.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_edit_profile.xml
@@ -550,7 +550,7 @@
             android:text="Interests"
             android:layout_marginTop="10dp"
             android:id="@+id/InterestsEditText"
-            android:fontFamily="sans-serif-condensed-medium"
+            android:fontFamily="serif"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/BioEdit"
             android:textSize="26dp"
