--- a/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
@@ -72,7 +72,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
-                    android:fontFamily="sans-serif-condensed-medium"
+                    android:fontFamily="serif"
                     android:gravity="center"
                     android:text="Melika"
                     android:textColor="@color/Verypink"
@@ -84,7 +84,7 @@
                     android:id="@+id/LastName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-condensed-medium"
+                    android:fontFamily="serif"
                     android:gravity="center"
                     android:text="Ahmadi"
                     android:textColor="@color/Verypink"
