APIS except join room are done

--- a/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
@@ -388,6 +388,7 @@
         app:itemIconTint="@color/black"
         app:itemTextColor="@color/black"
         android:layout_alignParentBottom="true"
+        app:labelVisibilityMode="labeled"
         android:background="@color/light"
         app:menu="@menu/bottom_navigation"/>
 </RelativeLayout>
