--- a/ChatHouse/app/src/main/res/layout/activity_room_info.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_room_info.xml
@@ -1,50 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RoomInfo"
-    android:background="@drawable/b22">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context=".Pages.RoomInfo"
+    android:background="@drawable/b22"
+    android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
         android:textSize="20dp"
         android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:text="Room Name"
         android:id="@+id/RoomNameInfoPage"
         >
 
     </TextView>
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+
+        android:layout_marginTop="5dp"
+        android:background="@color/white"
+        android:tooltipText="Interests" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:textSize="20dp"
         android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/RoomNameInfoPage"
         android:text="Room Description"
         android:id="@+id/DescriptionRoom"
         >
     </TextView>
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/white"
+        android:tooltipText="Interests" />
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         app:layout_constraintTop_toBottomOf="@id/DescriptionRoom"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/RoomInterestCardView"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         app:cardBackgroundColor="@color/almostgreen"
         app:cardCornerRadius="50dp"
         app:cardElevation="6dp"
 >
+
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -56,6 +68,12 @@
             android:textSize="18dp"
             android:textStyle="italic" />
     </com.google.android.material.card.MaterialCardView>
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/white"
+        android:tooltipText="Interests" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,11 +81,16 @@
         android:layout_marginTop="10dp"
         android:fontFamily="serif"
         android:id="@+id/RoomMemberText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_gravity="center_horizontal"
         app:layout_constraintTop_toBottomOf="@id/RoomInterestCardView">
 
     </TextView>
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="2dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/gray"
+        android:tooltipText="Interests" />
 
     <ListView
         android:id="@+id/RoomMembersListView"
@@ -75,9 +98,8 @@
         android:layout_height="wrap_content"
         android:fadeScrollbars="false"
         android:layout_weight="4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/RoomMemberText"></ListView>
+        android:layout_above="@+id/DeleteRoom"
+        ></ListView>
 
     <Button
         android:layout_width="match_parent"
@@ -94,4 +116,4 @@
 
     </Button>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
