--- a/ChatHouse/app/src/main/res/layout/activity_setting_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_setting_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingPage"
+    tools:context=".Pages.SettingPage"
     android:background="@drawable/b22">
     <Button
         android:layout_width="300dp"
