--- a/ChatHouse/app/src/main/res/layout/dialog_room_creation.xml
+++ b/ChatHouse/app/src/main/res/layout/dialog_room_creation.xml
@@ -80,6 +80,15 @@
 
         </TextView>
         <TextView
+            android:id="@+id/timeEditmodal"
+            android:gravity="center_vertical"
+            android:textSize="18dp"
+            app:layout_constraintStart_toEndOf="@+id/TimeText"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/DesRoom"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"/>
+        <TextView
             android:layout_width="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_height="50dp"
