--- a/ChatHouse/app/src/main/res/layout/dialog_room_creation.xml
+++ b/ChatHouse/app/src/main/res/layout/dialog_room_creation.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Room creation"
+            android:text="Room information"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="20dp"
