--- a/ChatHouse/app/src/main/res/layout/list_view_room_followings_suggested_items.xml
+++ b/ChatHouse/app/src/main/res/layout/list_view_room_followings_suggested_items.xml
@@ -10,7 +10,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/room_search_cardview"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="135dp"
         android:layout_margin="12dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="6dp">
@@ -18,7 +18,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/light">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -101,7 +102,7 @@
             <TextView
                 android:id="@+id/room_suggestedBy_followings"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="5dp"
