--- a/ChatHouse/app/src/main/res/layout/activity_room.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_room.xml
@@ -28,14 +28,17 @@
         android:clickable="true">
 
     </TextView>
-<!--    <fragment-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_below="@+id/RoomName"-->
-<!--        android:layout_above="@+id/LeaveRoom"-->
-<!--      >-->
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/RoomName"
+        android:layout_above="@+id/LeaveRoom"
+        android:name="com.example.chathouse.Pages.Chat"
+        android:id="@+id/chatFragment"
+        android:layout_marginTop="5dp"
+      >
 
-<!--    </fragment>-->
+    </fragment>
     <Button
         android:layout_width="match_parent"
         android:layout_height="50dp"
