--- a/ChatHouse/app/src/main/res/layout/activity_room.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_room.xml
@@ -45,6 +45,12 @@
             android:layout_above="@+id/Message"
             android:id="@+id/MessagesPart">
 
+            <ListView
+                android:id="@+id/chatBox"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </ListView>
         </LinearLayout>
 
         <EditText
